Update base_config.cfg for Marathi language model

--- a/base_config.cfg
+++ b/base_config.cfg
@@ -9,7 +9,7 @@ vectors = null
 gpu_allocator = "pytorch"
 
 [nlp]
-lang = "hi"
+lang = "mr"
 pipeline = ["transformer","ner"]
 batch_size = 128
 
@@ -20,7 +20,7 @@ factory = "transformer"
 
 [components.transformer.model]
 @architectures = "spacy-transformers.TransformerModel.v3"
-name = "ai4bharat/indic-bert"
+name = "bert-base-multilingual-uncased"
 tokenizer_config = {"use_fast": true}
 
 [components.transformer.model.get_spans]
