--- a/algo_configuration.yaml
+++ b/algo_configuration.yaml
@@ -1,6 +1,6 @@
 Name: Spacy Hindi NER with Cuda
 Version: 1.0
-Owner: Vimal Menon
+Owner: Astutic AI
 DataFormat: CoNLL2003
 RunOn: Docker
 Details:
@@ -14,7 +14,7 @@ Details:
 AlgoFrom: Git #(local/remote)
 AlgoDetails:
   Path: https://github.com/astutic/acharya-spacy.git
-  Branch: Spacy-hindi-ner
+  Branch: Spacy-Marathi-NER
   Auth: None #(http/ssh/None)
   DockerfilePath: Dockerfile
   ConfigPath: config.yaml
